Task management :: add jenkins file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 logging.level.root=INFO
 spring.mvc.static-path-pattern=/static/**
+server.port=9090
