Task management :: add "/" mapping

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>Task-magagement</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Task-magagement</name>
+    <packaging>war</packaging>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>17</java.version>
@@ -53,6 +54,11 @@
             <version>1.2.17</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.3.0</version>
@@ -67,6 +73,7 @@
     </dependencies>
 
     <build>
+        <finalName>task</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
